Features:
 * New appearance!
 * Added a hotkey (F5) to Reset Windows state (initial sizes and position).

Tweaks:
 * Progress text is now shown in a separate panel.
 * Modified map in the opened maps panel will be highlighted with a color, not an asterisk.
 * Variables preview window will collapse when the instance has initial variables.

--------------------------------------
 v1.3.1 (2020-05-20)
--------------------------------------

Fixes:
 * Nasty crashes when copy-pasting anything into the "Edit Variables" window.
 * Impropper rendering of the typed russian letters in the "Edit Variables" window.
 * Saving logs to a file.

--------------------------------------
 v1.3.0 (2020-05-12)
--------------------------------------

Features:
 * Item selection will open the item in the environment tree.
 * Added shortcuts to do a zoom-in/zoom-out with keyboard buttons plus and minus.
 * Added canvas panning with arrow keys.

Fixes:
 * Reset marked tile after closing of the search result panel.

--------------------------------------
 v1.2.0 (2020-05-10)
--------------------------------------

Features:
 * Added an option to pin variables in "Edit Variables" window.
 * Added "Screenshot" tool to create high-resolution map images.
   Screenshot could be made for the map or just a selected area.
   It's available from the menu bar: "Options->Screenshot...".

Fixes:
 * Crush when editing variables.

Tweaks:
 * The editor now has its own logo! It was designed by Clément "Topy", thank him for that.
 * Allowed for turfs to change their dir from the tile popup menu.
 * "Preferences" button moved under the "File" menu item.
 * When trying to change the environment, if there are changes on the map, you will be asked to save them.

--------------------------------------
 v1.1.0 (2020-04-18)
--------------------------------------

Features:
 * Added a built-in changelog. Auto-shown when updated. Could be opened with: "Help->Changelog...".