@@ -3,6 +3,7 @@ package strongdmm.ui.dialog.edit_vars.model
 import imgui.ImString
 
 class Variable(
+    val type: String,
     val name: String,
     private val initialValue: String, // value currently used by tile item (taken from map)
     private val originalValue: String // value from dme item (taken from code)
